--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -218,6 +218,25 @@ slider-component.slider-component-full-width {
 
 /* Scrollbar */
 
+.slider {
+  scrollbar-color: rgba(var(--color-foreground), 0.45) rgba(var(--color-foreground), 0.08);
+  -ms-overflow-style: none;
+  scrollbar-width: var(--scrollbar-width);
+}
+.slider::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+}
+.slider::-webkit-scrollbar-thumb {
+  background-color: rgba(var(--color-foreground), 0.45);
+  border-radius: 16px;
+  border: 0;
+}
+.slider::-webkit-scrollbar-track {
+  background: rgba(var(--color-foreground), 0.04);
+  border-radius: 16px;
+}
+
 .slider-counter {
   display: flex;
   justify-content: center;
